# Bot_Chernova_Team

./: .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  PrivacyPolicy.md  README.md  alembic.ini  docker-compose.yml  example.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.cursor/: mcp.json  settings.json
.taskmaster/: config.json  progress.txt  state.json
app/: README.md
csv/: delivery_dataset_train.csv  delivery_dataset_valid.csv
delivery_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: ACCESS_ROLE_STATUS_LAYER.md  ADMIN_GUIDE.md  ADMIN_PANEL.md  AI_CURATOR.md  AI_FAQ_SEARCH.md  AI_LAYER_DUPLICATE_AUDIT.md  AI_MODES.md  AI_WIRING_SMOKE_CHECKLIST.md  ANALYTICS_INTEGRATION_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_AI_LAYER.md  ARCHITECTURE_AUDIT_REPORT.md  AUDIT_STATUS_2026-03-01.md  AUTOMATION_EVENTS.md  CANONICAL_LAYERS.md  CLEANUP_AUDIT_REPORT.md  CLEANUP_DOCS_SYNC.md  DATA_DICTIONARY.md  DB_MINIMAL_PRODUCTION_CORE.md  DEPLOYMENT.md  DOCS.md  DOCS_CLEANUP_REPORT.md  EMBEDDINGS_VERIFICATION.md  FAISS_EVALUATION.md  LEGACY_UX_AUDIT_AND_MIGRATION_MAP.md  N8N_PILOT_VERIFICATION_MIRROR.md  PROACTIVE_LAYER.md  PROACTIVE_RISK_EVENTS.md  QUALITY_GATES_REPORT.md  README.md  REBUILD_EMBEDDINGS_REPORT.md  RUNBOOK.md  SCENARIO_ROUTER_LAYER.md  SECURITY.md  STABLE_AI_LAYER_REPORT.md  SUPERSET_LAST_MILE_DASHBOARDS.md  TELEGRAM_MUST_WORK.md  TESTING.md  TROUBLESHOOTING.md  ai-architecture-audit.md  (+3 more)
migrations/: env.py
repositories/: faq_repo.py
scripts/: build_canonical_knowledge.py  rebuild_embeddings.py  (+11 more)
(+211 files in other folders)
