[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-assistant"
version = "0.1.0"
description = "Delivery Assistant MVP — Telegram bot + PostgreSQL + Redis + Celery"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "SQLAlchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery[redis]>=5.3",
    "boto3>=1.34",
    "redis>=5.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "openai>=1.40.0",
    "groq>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.1",
]

[project.scripts]
bot = "src.bot.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
